# prosperous_bot

./: .gitignore  20250609_auto_lot_step.patch  BTC_neutral_rebalance_roadmap.md  BTC_neutral_rebalance_roadmap_unified.md  BTC_neutral_rebalance_roadmap_v2.md  add.txt  bot_state.json  config.json  config_signal.json  exchange_api.py  fix_neutral_grid_weights.patch  log.txt  pyproject.toml  pytest.ini  rebalance_backtester.patch  requirements-dev.txt  requirements.txt  requirements_full.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 0618ad8288442226  0e6f61503da9616d  18e2453baca79eae  29ef64e1e3a9872b  515ff268f83d5763  5a1e36421ddc2007  6a73fcd5bd06a404  848ce37492df7271  86399e68a1bf583d  910954d3b46d09c8  92625eb1b58c55db  a655213ed3a5de65  a68ffa48f666da1d  a81fec3199741c18  ab35ed4b14f03a41  ac2075ecf9cfa88a  b1dfd541fec74917  b330670397072086  bc5b5d8335a4cac1  bd737e5bcbf4ce6e  cc3e96bc3f3d3e4d  ccdc723c4e5d542a  d217fee4f13f0f32  da39a3ee5e6b4b0d  db0d9b10a6fe3172  e0ce36f73f5019e7  f14c23819784442b
.hypothesis/examples/04e6b3400353b141/: 17d20f04ee4cf5fc  238f3f658574ed65  2bfe1a37179c54b8  3039690ad9fb4a5a  3ebc56d80e0bc8c5  3f8e6dfe887451e6  4e19d6b61e60f9c4  5d021a043537f86c  645bbf6fee1b3cfb  67e0bc6c32f1f859  6eab8590b5bd489e  72f56e7434deb417  779524b1c9cfcaf8  792361bc55fec9ea  88590f076d184907  887d3713ae87720c  8a87b16a7f267ef2  (+13 more)
adaptive_agent/: __init__.py  config.py  data_loader.py  exchange_api.py  futures_backtester.py  graphs.py  ml_model.py  portfolio_manager.py  signal_bot.py  signal_generator.py  strategy.py  update_distribution.py  utils.py
config/: backtest_params_example.json  best_config_v1000.json  custom_config.json  dummy_unified_config_for_backtester.json  unified_config.example.json  unified_config.example.json.orig
data/: BTCUSDT_1h_data.csv  BTCUSDT_default_1h_dummy.csv  dummy_BTCUSDT_1h_for_backtester.csv  dummy_BTCUSDT_signals_for_backtester.csv  simulated_custom_data.csv  simulated_data.csv  simulated_example_data.csv
graphs/: AAVEUSDT_data.csv  AAVEUSDT_indicators_adx.html  AAVEUSDT_signals.csv  ADAUSDT_data.csv  ADAUSDT_indicators_adx.html  ADAUSDT_signals.csv  ANIMEUSDT_data.csv  ANIMEUSDT_indicators_adx.html  ANIMEUSDT_signals.csv  AVAXUSDT_data.csv  AVAXUSDT_indicators_adx.html  AVAXUSDT_signals.csv  BTCUSDT_data.csv  BTCUSDT_indicators_adx.html  BTCUSDT_signals.csv  DOGEUSDT_data.csv  DOGEUSDT_indicators_adx.html  DOGEUSDT_signals.csv  ENAUSDT_data.csv  ENAUSDT_indicators_adx.html  ENAUSDT_signals.csv  FETUSDT_data.csv  FETUSDT_indicators_adx.html  HUMAUSDT_data.csv  HUMAUSDT_indicators_adx.html  HUMAUSDT_signals.csv  LPTUSDT_data.csv  LPTUSDT_indicators_adx.html  LPTUSDT_signals.csv  NEIROUSDT_data.csv  NEIROUSDT_indicators_adx.html  NEIROUSDT_signals.csv  PENGUUSDT_data.csv  PENGUUSDT_indicators_adx.html  PEOPLEUSDT_data.csv  PEOPLEUSDT_indicators_adx.html  PNUTUSDT_data.csv  PNUTUSDT_indicators_adx.html  SOPHUSDT_data.csv  SOPHUSDT_indicators_adx.html  (+27 more)
graphs/ml/: ADAUSDT_xgb_model.pkl  DOGEUSDT_xgb_model.pkl  ENAUSDT_xgb_model.pkl  summary_report.html
patches/: P0_warnings.patch  P1_coverage_badge.patch  P2_ci_artefacts.patch
reports/backtest_20250527_010224/: summary.csv  trades.csv
reports/backtest_20250527_183500/: summary.csv  trades.csv
reports/backtest_20250527_213621/: summary.csv  trades.csv
reports/backtest_20250527_215000/: summary.csv  trades.csv
reports/for_jules/: summary.csv  trades.csv
reports/last_report/: equity.csv  rebalance_trades.csv  summary.csv  trades.csv
src/: data_loader.py  exchange_api.py  exchange_gate.py  portfolio_manager.py  rebalance_engine.py  strategy.py  test_exchange_api.py  utils.py
src/prosperous_bot/: README.md  config.py  exchange_gate.py  futures_backtester.py  graphs.py  logging_config.py  ml_model.py  monitoring.py  portfolio_manager.py  rebalance_backtester.py  rebalance_backtester_Jules.py  rebalance_engine.py  rebalance_optimizer.py  rebalance_optimizer_combined.py  signal_bot.py  signal_generator.py  update_distribution.py  utils.py
templates/: summary_template.html
tests/: conftest.py  test_exchange.py  test_exchange_api.py  test_exchange_property.py  test_neutral_pnl_when_balanced.py  test_neutral_rebalance.py  test_portfolio.py  test_portfolio_property.py  test_rebalance.py  test_rebalance_backtester_leverage.py  test_rebalance_engine.py  test_rebalance_reports.py  test_rebalance_signal_handling.py  test_simulate_rebalance_pnl.py  test_utils.py
tools/: Prompt_Futures_Bot.txt  block_udp_outbound_dynamic.ps1  block_unwanted_outbound_dynamic.ps1  checkup.ps1  restore_network.ps1  restore_network_launcher.bat  restote_dhcp.txt  run_pytest_with_coverage.bat
(+111 files in other folders)
