[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_agent"
version = "0.1.0"
description = "Trading AI Agent prototype"
authors = [{ name = "FMProducer", email = "dev@example.com" }]
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9",
    "gate-api>=6.23",
    "pydantic>=2.7",
]

[tool.setuptools]
# Укажи здесь все имена .py файлов (без расширения .py),
# которые ты переместил из src/adaptive_agent/ в src/
py-modules = [
    "__init__",
    "config_loader",
    "data_processor",
    "exchange_api",
    "main_logic",
    "models",
    "monitoring_module",
    "order_manager",
    "portfolio_manager",
    "signal_generator",
    "telegram_bot",
    "utils"
]
package-dir = {"" = "src"} # Сообщает setuptools, что корневые модули находятся в 'src'

[tool.pytest.ini_options]
addopts = "-q --cov=exchange_api --cov=portfolio_manager --cov-fail-under=90" # Обнови пути и добавь другие модули из src/ для покрытия
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "hypothesis",
]